--- a/index.html
+++ b/index.html
@@ -5,33 +5,32 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quebra-cabeça Educacional – Humildoso</title>
+
 <style>
-body {
+body{
   font-family: Arial, sans-serif;
   background:#f5f5f5;
   text-align:center;
   margin:0;
   padding:10px;
 }
-h2 { margin-top:10px; }
-#controls {
-  margin: 10px auto;
-}
-select {
-  padding:8px;
-  font-size:16px;
-}
-#puzzle {
+#controls{ margin:10px 0; }
+select{ padding:8px; font-size:16px; }
+
+#puzzle{
   margin:20px auto;
   display:grid;
   gap:2px;
-  touch-action: none;
 }
-.piece {
+.piece{
   background-size:100% 100%;
-  cursor:grab;
+  border-radius:4px;
+  cursor:pointer;
 }
-#message {
+.piece.selected{
+  outline:3px solid #2c7a7b;
+}
+#message{
   display:none;
   font-size:20px;
   margin-top:20px;
@@ -40,10 +39,11 @@ select {
 }
 </style>
 </head>
+
 <body>
 
 <h2>Monte o quebra-cabeça 🎵</h2>
-<p>Escolha a dificuldade e complete a imagem.</p>
+<p>Toque em duas peças para trocar de lugar.</p>
 
 <div id="controls">
   <label>Dificuldade: </label>
@@ -65,17 +65,19 @@ Aprender também pode ser divertido 🎶
 const puzzle = document.getElementById('puzzle');
 const levelSelect = document.getElementById('level');
 const message = document.getElementById('message');
-let dragged;
+let firstPiece = null;
 
 function createPuzzle(cols){
   puzzle.innerHTML = "";
   message.style.display = "none";
+
   const rows = Math.round(48 / cols);
   const size = Math.min(window.innerWidth - 40, 360);
   puzzle.style.width = size + "px";
   puzzle.style.gridTemplateColumns = `repeat(${cols}, 1fr)`;
 
   let pieces = [];
+
   for(let y=0;y<rows;y++){
     for(let x=0;x<cols;x++){
       const div = document.createElement('div');
@@ -85,42 +87,49 @@ function createPuzzle(cols){
       div.style.backgroundImage = "url('Hmildoso.png')";
       div.style.backgroundSize = `${size}px ${size}px`;
       div.style.backgroundPosition = `-${x*(size/cols)}px -${y*(size/cols)}px`;
-      div.draggable = true;
+      div.dataset.correct = div.style.backgroundPosition;
       pieces.push(div);
     }
   }
 
-  pieces.sort(()=>Math.random()-0.5).forEach(p=>puzzle.appendChild(p));
+  pieces.sort(()=>Math.random()-0.5);
 
-  document.querySelectorAll('.piece').forEach(piece=>{
-    piece.addEventListener("dragstart", e => dragged = piece);
-    piece.addEventListener("dragover", e => e.preventDefault());
-    piece.addEventListener("drop", e => {
-      const temp = dragged.style.backgroundPosition;
-      dragged.style.backgroundPosition = piece.style.backgroundPosition;
-      piece.style.backgroundPosition = temp;
-      checkWin();
-    });
+  pieces.forEach(piece=>{
+    piece.addEventListener('click', ()=>selectPiece(piece));
+    puzzle.appendChild(piece);
   });
+}
+
+function selectPiece(piece){
+  if(!firstPiece){
+    firstPiece = piece;
+    piece.classList.add('selected');
+  } else {
+    const temp = firstPiece.style.backgroundPosition;
+    firstPiece.style.backgroundPosition = piece.style.backgroundPosition;
+    piece.style.backgroundPosition = temp;
+
+    firstPiece.classList.remove('selected');
+    firstPiece = null;
+    checkWin();
+  }
 }
 
 function checkWin(){
   const pieces = document.querySelectorAll('.piece');
-  let correct = true;
+  let ok = true;
   pieces.forEach(p=>{
-    if(p.style.backgroundPosition !== p.dataset.pos){
-      correct = false;
+    if(p.style.backgroundPosition !== p.dataset.correct){
+      ok = false;
     }
   });
-  if(correct){
-    message.style.display = "block";
-  }
+  if(ok) message.style.display = "block";
 }
 
 levelSelect.addEventListener("change", ()=>createPuzzle(levelSelect.value));
-
 createPuzzle(6);
 </script>
 
 </body>
 </html>
+
